trying to get browserify working in gulp.  still getting 'require is not defined' browser error

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Flappy Bird</title>
+
+		<script async src="js/main.js"></script><!-- TODO RYAN do i point this to what browserify outputs, /build/js/app.js? -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css" />
+		<link rel="stylesheet" href="css/main.css">
+
 	</head>
 	<body>
 		<canvas id="main-canvas"></canvas>
